; ModuleID = '/home/carl/AnghaBench/darwin-xnu/tests/extr_kqueue_fifo_18776047.c_write_some_data.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/tests/extr_kqueue_fifo_18776047.c_write_some_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"ABCDE\00", align 1
@errno = common dso_local global i64 0, align 8
@EAGAIN = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [39 x i8] c"write to fd %d of %s of len %d failed.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @write_some_data(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  store i32 0, i32* %4, align 4
  store i32 5, i32* %5, align 4
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8** %6, align 8
  br label %7

7:                                                ; preds = %1, %40
  store i64 0, i64* @errno, align 8
  %8 = load i32, i32* %2, align 4
  %9 = load i8*, i8** %6, align 8
  %10 = load i32, i32* %5, align 4
  %11 = sext i32 %10 to i64
  %12 = call i64 @write(i32 %8, i8* %9, i64 %11)
  %13 = trunc i64 %12 to i32
  store i32 %13, i32* %3, align 4
  %14 = load i32, i32* %3, align 4
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %16, label %36

16:                                               ; preds = %7
  %17 = load i64, i64* @errno, align 8
  %18 = load i64, i64* @EAGAIN, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %20, label %29

20:                                               ; preds = %16
  %21 = load i32, i32* %5, align 4
  %22 = icmp eq i32 %21, 1
  br i1 %22, label %23, label %25

23:                                               ; preds = %20
  %24 = load i32, i32* %4, align 4
  ret i32 %24

25:                                               ; preds = %20
  %26 = load i32, i32* %5, align 4
  %27 = add nsw i32 %26, -1
  store i32 %27, i32* %5, align 4
  br label %28

28:                                               ; preds = %25
  br label %35

29:                                               ; preds = %16
  %30 = load i32, i32* %2, align 4
  %31 = load i8*, i8** %6, align 8
  %32 = load i32, i32* %5, align 4
  %33 = call i32 @T_ASSERT_FAIL(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.1, i64 0, i64 0), i32 %30, i8* %31, i32 %32)
  %34 = call i32 (...) @abort() #3
  unreachable

35:                                               ; preds = %28
  br label %40

36:                                               ; preds = %7
  %37 = load i32, i32* %3, align 4
  %38 = load i32, i32* %4, align 4
  %39 = add nsw i32 %38, %37
  store i32 %39, i32* %4, align 4
  br label %40

40:                                               ; preds = %36, %35
  br label %7
}

declare dso_local i64 @write(i32, i8*, i64) #1

declare dso_local i32 @T_ASSERT_FAIL(i8*, i32, i8*, i32) #1

; Function Attrs: noreturn
declare dso_local i32 @abort(...) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
